# aoc24

./: README.md  init_day.py  pyproject.toml  setup.cfg  support.py
.github/workflows/: main.yml
day00/: part1.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
day08/: part1.py  part2.py
scripts/: fetch_input.py  init_day.py
template/: part1.py
